docs: kyo-aeron and kyo-compiler describe one transport
The guides still documented the two-transport split as binding: kyo-aeron's
CONTRIBUTING carried a Two-transport architecture section and a rule to implement every
transport operation twice, its README told users to pass four --add-opens for the Java
driver, and kyo-compiler's guide described a shared MediaDriver.

Rewritten to the shape that exists, including why a second binding is not worth
reintroducing (the JVM's re-derived close guard is where the use-after-free lived), the
native-library and --enable-native-access requirements that replaced the add-opens, the
closed-client rules FfiAeronTransport now owns, and Pool.init widening to Async.